cmake_minimum_required(VERSION 3.10)
project(OOP_2_uzduotis)
set(PROJECT_SRC "build_lib.h" "failu_generavimas.cpp" "failu_generavimas.h" "ivedimas_isvedimas.cpp" "ivedimas_isvedimas.h" "main.cpp" "rusiavimas.h" "rusiavimas.cpp" "studentas.cpp" "studentas.h" "studentu_isskirstymas.cpp" "studentu_isskirstymas.h")
add_executable(OOP_2_uzduotis ${PROJECT_SRC})